--- a/train.html
+++ b/train.html
@@ -43,13 +43,14 @@
           <div class="card mb-4">
             <div class="card-header" style="background-color: rgb(46, 90, 105): white">Current Train Schedule</div>
             <div class="card-body">
-              <table class="table table-sm table-hover" id="employee-table">
+              <table class="table table-sm table-hover" id="train-table">
                 <thead>
                   <tr>
                     <th scope="col">Train Name</th>
                     <th scope="col">Destination</th>
-                    <th scope="col">First Train (HH:mm - military time)</th>
                     <th scope="col">Frequency (min)</th>
+                    <th scope="col">Next Arrival</th>
+                    <th scope="col">Minutes Away</th>
                   </tr>
                 </thead>
                 <tbody></tbody>
@@ -86,7 +87,7 @@
                     class="form-control"
                     id="start-input"
                     placeholder=""
-                    type="text"
+                    type="text "
                   />
                 </div>
                 <div class="form-group">
